--- a/lib/premiere_ecoute_web/components/layouts/root.html.heex
+++ b/lib/premiere_ecoute_web/components/layouts/root.html.heex
@@ -10,6 +10,8 @@
     <link phx-track-static rel="stylesheet" href={~p"/assets/css/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/js/app.js"}>
     </script>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js">
+    </script>
     <script>
       (() => {
         const setTheme = (theme) => {
